--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = "https://amrelhusseiny.github.io/"
+# baseURL = "https://amrelhusseiny.github.io/"
+baseURL = "http://locaLhost:1313/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = 'ananke'
