modified:   config.yaml 	modified:   content/about.md 	modified:   content/blog/001_networks_0001_bgp_rpki/001_networks_0001_bgp_rpki.md        modified:   content/blog/001_networks_0002_gnmi_network_automation/001_networks_0002_gnmi_network_automation_part_1.md 	modified:   content/blog/001_networks_0002_gnmi_network_automation/001_networks_0002_gnmi_network_automation_part_2.md 	modified:   content/blog/001_networks_0002_gnmi_network_automation/001_networks_0002_gnmi_network_automation_part_3.md 	new file:   content/favicon.ico 	modified:   docs/404.html 	modified:   docs/about/index.html 	modified:   docs/blog/001_networks_0001_bgp_rpki/001_networks_0001_bgp_rpki/index.html 	modified:   docs/blog/001_networks_0002_gnmi_network_automation/001_networks_0002_gnmi_network_automation_part_1/index.html 	modified:   docs/blog/001_networks_0002_gnmi_network_automation/001_networks_0002_gnmi_network_automation_part_2/index.html 	modified:   docs/blog/001_networks_0002_gnmi_network_automation/001_networks_0002_gnmi_network_automation_part_3/index.html 	modified:   docs/blog/index.html 	modified:   docs/categories/index.html 	modified:   docs/index.html 	modified:   docs/index.xml 	modified:   docs/tags/index.html 	new file:   favicon.ico

--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,7 @@ title: "Amr ElHusseiny's Blog"
 languageCode: "en-us"
 publishDir: "docs"
 
+
 module:
   hugoVersion:
     extended: true
@@ -15,6 +16,8 @@ params:
   author: Amr ElHusseiny
   avatar: "amr_photo.png"
   description: Network engineer and Automation advocate
+  menu_item_separator: "<br>"
+  favicon: "favicon.ico"
   style:
     ## SideBar Color
     darkestColor: "#FFFFFF"
@@ -26,6 +29,13 @@ params:
     lightColor: "#57595b"
     ## Headers Color
     lightestColor: "#3e4041"
+  social:
+    - icon: "github"
+      name: "amrelhusseiny Github"
+      url: "https://github.com/amrelhusseiny"
+    - icon: "linkedin"
+      name: "amrelhusseiny linkedin"
+      url: "https://www.linkedin.com/in/amr-abd-el-halim-2a330456"
 
 menu:
   main:
