--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 # config.yaml
 # baseURL: http://localhost:1313/
 baseURL: https://amrelhusseiny.github.io/
-buildDrafts: true
+buildDrafts: false
 theme: "m10c"
 title: "Amr ElHusseiny's Blog"
 languageCode: "en-us"
