--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ content/.DS_Store
 content/blog/.DS_Store
 content/blog/001_networks_0001_bgp_rpki/.DS_Store
 .DS_Store
+content/blog/006_other_public_cloud.md
